only create irsa stack once there are nodes for the job

--- a/templates/amazon-eks.template.yaml
+++ b/templates/amazon-eks.template.yaml
@@ -916,6 +916,7 @@ Resources:
       VpcId: !Ref VPCID
       ClusterName: !If [GenerateClusterName, !Ref GenerateName, !Ref EKSClusterName]
   AwsNodeIrsa:
+    DependsOn: NodeGroupStack
     Condition: EnableOIDC
     Type: AWS::CloudFormation::Stack
     Properties:
