--- a/templates/amazon-eks.template.yaml
+++ b/templates/amazon-eks.template.yaml
@@ -664,6 +664,7 @@ Resources:
       Parameters:
         OIDCIssuerURLWithoutProtocol:  !Join [ '', !Split [ 'https://', !GetAtt EKSControlPlane.Outputs.OIDCIssuerURL ] ]
         EksClusterName: !GetAtt EKSControlPlane.Outputs.EKSName
+        VpcId: !Ref VPCID
   GenerateNameFunction:
     Condition: GenerateClusterName
     Type: AWS::Lambda::Function
