--- a/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
+++ b/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
@@ -665,6 +665,15 @@ Resources:
         VaultUIAccessCIDR: !Ref RemoteAccessCIDR
         NodeVolumeSize: !If [WindowsNodes, 50, !Ref 'AWS::NoValue']
         KubernetesVersion: !If [VaultEnabled, '1.17', !Ref 'AWS::NoValue']
+  AdvancedConfiguration:
+    Type: Custom::AdvancedConfiguration
+    Metadata:
+      DependsOn: !If [CreateAdvancedConfigWithDefaults, !Ref AdvancedConfigDefaultsStack, !Ref 'AWS::NoValue']
+    Properties:
+      ServiceToken: !Sub ['arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${Prefix}-AdvancedConfigurationAccess', {Prefix: !FindInMap [Config, Prefix, Value]}]
+      ParameterPath: !Sub 
+        - '/quickstart/amazon-eks/${ConfigSetName}/'
+        - ConfigSetName: !If [CreateAdvancedConfigWithDefaults, !Ref 'AWS::StackName', !Ref ConfigSetName]
   EKSStack:
     Type: AWS::CloudFormation::Stack
     Metadata:
@@ -737,6 +746,11 @@ Resources:
         RafaySysLastName: !Ref RafaySysLastName
         RafaySysOrganizationName: !Ref RafaySysOrganizationName
         RafaySysEmail: !Ref RafaySysEmail
+        # Passing these advanced options explicitly as they are used in Conditions in the nested stack
+        BastionBootstrapScript: !GetAtt AdvancedConfiguration.bastion_BastionBootstrapScript
+        BastionIAMRoleName: !GetAtt AdvancedConfiguration.bastion_BastionIAMRoleName
+        BastionVariables: !GetAtt AdvancedConfiguration.bastion_BastionVariables
+        IamOidcProvider: !GetAtt AdvancedConfiguration.cluster_IamOidcProvider
 Outputs:
   EKSClusterName:
     Value: !GetAtt EKSStack.Outputs.EKSClusterName
