--- a/templates/amazon-eks-entrypoint-new-vpc.template.yaml
+++ b/templates/amazon-eks-entrypoint-new-vpc.template.yaml
@@ -667,6 +667,15 @@ Resources:
         KubernetesVersion: !If [VaultEnabled, '1.17', !If [WindowsNodes, '1.20', !Ref 'AWS::NoValue']]
         ConsulUIAccessCIDR: !Ref RemoteAccessCIDR
         VaultUIAccessCIDR: !Ref RemoteAccessCIDR
+  AdvancedConfiguration:
+    Type: Custom::AdvancedConfiguration
+    Metadata:
+      DependsOn: !If [CreateAdvancedConfigWithDefaults, !Ref AdvancedConfigDefaultsStack, !Ref 'AWS::NoValue']
+    Properties:
+      ServiceToken: !Sub ['arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${Prefix}-AdvancedConfigurationAccess', {Prefix: !FindInMap [Config, Prefix, Value]}]
+      ParameterPath: !Sub 
+        - '/quickstart/amazon-eks/${ConfigSetName}/'
+        - ConfigSetName: !If [CreateAdvancedConfigWithDefaults, !Ref 'AWS::StackName', !Ref ConfigSetName]
   AutoDetectSharedResources:
     Type: AWS::CloudFormation::Stack
     Condition: DetectSharedStacks
@@ -816,6 +825,11 @@ Resources:
         RafaySysLastName: !Ref RafaySysLastName
         RafaySysOrganizationName: !Ref RafaySysOrganizationName
         RafaySysEmail: !Ref RafaySysEmail
+        # Passing these advanced options explicitly as they are used in Conditions in the nested stack
+        BastionBootstrapScript: !GetAtt AdvancedConfiguration.bastion_BastionBootstrapScript
+        BastionIAMRoleName: !GetAtt AdvancedConfiguration.bastion_BastionIAMRoleName
+        BastionVariables: !GetAtt AdvancedConfiguration.bastion_BastionVariables
+        IamOidcProvider: !GetAtt AdvancedConfiguration.cluster_IamOidcProvider
 Outputs:
   EKSClusterName:
     Value: !GetAtt EKSStack.Outputs.EKSClusterName
